--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,7 +13,7 @@
   </script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Fullstack App</title>
+  <title>Dimitrius McKinnon Full Stack Portfolio</title>
 
 </head>
 
